# agents

./: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  example.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build-image.yaml
rs/logd/: Cargo.toml  README.md
rs/logd/src/: auth.rs  constant.rs  error.rs  main.rs  reader.rs  test.rs
rs/logd/src/auth/: auth.rs
rs/logd/src/client/: client.rs  error.rs  mod.rs
rs/logd/src/env/: env.rs  error.rs
rs/logd/src/form/: error.rs
rs/logd/src/io/: io.rs  mod.rs
rs/logd/src/threads/: mod.rs
rs/logd/src/threads/event/: event.rs  mod.rs
rs/logd/src/threads/file_event/: event.rs  mod.rs
rs/logd/src/threads/file_event/io/: io.rs  mod.rs
rs/logd/src/threads/listen_file_event/: error.rs  listen_file_event.rs  mod.rs
rs/logd/src/threads/listen_file_event/file_listener/: mod.rs
rs/logd/src/threads/process_file_events/: error.rs  mod.rs  process_file_events.rs  test.rs
rs/logd/src/threads/process_file_events/directory_listener/: directory_listener.rs  error.rs  mod.rs
rs/logd/src/threads/read/: mod.rs  read.rs
rs/logd/src/threads/read/reader/: error.rs  reader.rs  test.rs
rs/logd/src/threads/read_and_send/: error.rs  mod.rs  read.rs  read_and_send.rs  test.rs
rs/logd/src/threads/read_and_send/client/: client.rs  error.rs  mock.rs  mod.rs  trait.rs
rs/logd/src/threads/read_and_send/client/auth/: auth.rs  error.rs
rs/logd/src/threads/read_and_send/reader/: mod.rs  reader.rs
rs/logd/src/util/: mod.rs
rs/logd/src/util/env/: mod.rs
rs/logd/src/util/io/: io.rs  mod.rs
rs/logd/src/util/test/: test_util.rs
rs/logd/src/util/tracing/: error.rs  tracing.rs
rs/reflectord/: Cargo.toml
rs/reflectord/src/: customresource.rs  diff.rs  lib.rs  main.rs  resource.rs  watcher.rs
rs/shared/: Cargo.toml
rs/shared/src/: lib.rs
rs/shared/src/client/: client.rs  error.rs  mock.rs  mod.rs  trait.rs
rs/shared/src/client/auth/: auth.rs  error.rs  mod.rs
rs/shared/src/client/form/: form.rs  mod.rs
rs/shared/src/env/: env.rs  error.rs  mod.rs
rs/shared/src/tracing/: error.rs  mod.rs  tracing.rs
rs/watchd/: Cargo.toml  README.md
rs/watchd/src/: constant.rs  customresource.rs  error.rs  kubeapi.rs  lib.rs  main.rs  watcher.rs
