[workspace]
resolver = "2"

members = ["rs/logd"]

[workspace.package]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dotenv = "0.15.0"
thiserror = "1.0.63"
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
