[workspace]
resolver = "2"

members = ["rs/logd", "rs/reflectord", "rs/shared"]

[workspace.package]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bytes = "1.7.1"
dotenv = "0.15.0"
futures = "0.3.30"
hyper = "1.4.1"
inotify = "0.11.0"
reqwest = {version = "0.12.7", features = [
    "json",
    "multipart",
    "rustls-tls",
    "stream",
], default-features = false}
rstest = "0.22.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
shared = {path = "rs/shared"}
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = {version = "1.40.0", features = ["full"]}
tokio-stream = "0.1.16"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
