[package]
edition.workspace = true
name = "reflectord"
version = "0.1.0"

[dependencies]
futures = "0.3"
k8s-openapi = {version = "0.23", features = ["v1_31"]}
kube = {version = "0.96", features = ["runtime"]}
serde = "1.0.214"
serde_json = "1.0.132"
serde_yaml = "0.9.33"
tokio = {version = "1", features = ["full"]}
