[package]
edition.workspace = true
name = "shared"
version = "0.1.0"

[dependencies]
bytes = {workspace = true}
hyper = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[dev-dependencies]
dotenv = {workspace = true}
