[package]
edition.workspace = true
name = "watchd"
version = "0.2.3"

[dependencies]
futures = {workspace = true}
k8s-openapi = {workspace = true}
kube = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
shared = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
